Added videos back in (to database and sidebar). Modified coupon submit button to prevent default behavior. Modified styles to avoid conflicts with other services.

--- a/client/styles.css
+++ b/client/styles.css
@@ -1,25 +1,20 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family: sf pro display,-apple-system,BlinkMacSystemFont,Roboto,segoe ui,Helvetica,Arial,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol;
-  color: #3c3b37
-}
-
 .sidebar-container {
   width: 344px;
   border-radius: 4px;
-  margin-top: 30px;
-  margin-left: 750px;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: sf pro display,-apple-system,BlinkMacSystemFont,Roboto,segoe ui,Helvetica,Arial,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol;
+  color: #3c3b37
 }
 
 .sidebar-container-content {
   border-radius: 4px;
   width: 344px;
   box-shadow: 0 2px 4px rgb(0 0 0 / 8%), 0 4px 12px rgb(0 0 0 / 8%);
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .sidebar-preview-video {
@@ -28,8 +23,10 @@ body {
   border: 0;
   border-radius: 4px;
   width: 340px;
-  margin: 1px;
+  margin: 2px;
   height: 192px;
+  box-sizing: border-box;
+  padding: 0;
 }
 
 .sidebar-preview-video svg {
@@ -40,12 +37,17 @@ body {
   width: 340px;
   height: 192px;
   margin: 1px;
+  box-sizing: border-box;
+  padding: 0;
 }
 
 .sidebar-preview-video img {
   border-radius: 4px;
   width: 340px;
   height: 192px;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .sidebar-preview-video-overlay-text {
@@ -58,6 +60,9 @@ body {
   font-weight: 700;
   line-height: 1.2;
   z-index: 100;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .sidebar-preview-video-overlay-gradient {
@@ -69,12 +74,17 @@ body {
   width: 340px;
   height: 192px;
   border-radius: 4px;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .sidebar-main-content {
   margin-top: 24px;
   margin-left: 24px;
   margin-right: 24px;
+  box-sizing: border-box;
+  padding: 0;
 }
 
 .sidebar-button-container button {
@@ -83,51 +93,69 @@ body {
   font-size: 15px;
   font-weight: 700;
   border-radius: 4px;
+  box-sizing: border-box;
 }
 
 .sidebar-add-to-cart-button {
   background-color:#ec5252;
   color:white;
   border: none;
+  box-sizing: border-box;
+  margin-bottom: 6px;
+  padding: 0;
 }
 
 .sidebar-add-to-cart-button:hover {
   background-color:#eb2525;
+  box-sizing: border-box;
+  padding: 0;
 }
 
 .sidebar-buy-now-button {
   margin-top: 8px;
-  margin-bottom: 16px;
+  margin-bottom: 6px;
   background-color: transparent;
   color:#0f7c90;
   border: 1px solid #2896a9;
+  padding: 0;
 }
 
 .sidebar-button-container p {
   margin-bottom: 12px;
   font-size: 12px;
   text-align: center;
+  padding: 0;
 }
 
 .sidebar-price-info {
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .sidebar-big-price {
   font-size: 30px;
   font-weight: 700;
   margin-bottom: 12px;
+  box-sizing: border-box;
+  padding: 0;
 }
 
 .sidebar-discount-info {
   margin-bottom: 16px;
   margin-left: 6px;
+  box-sizing: border-box;
+  padding: 0;
 }
 
 .sidebar-discount-info s {
   color: gray;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .sidebar-course-includes {
@@ -136,20 +164,29 @@ body {
   font-size: 14px;
   display: flex;
   flex-direction: column;
+  box-sizing: border-box;
+  padding: 0;
 }
 
 .sidebar-course-includes b {
   font-size: 16px;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .sidebar-course-includes-item {
   margin-top: 6px;
   height: 20px;
   display: flex;
+  box-sizing: border-box;
+  padding: 0;
 }
 
 .sidebar-course-includes-text {
   margin-left: 12px;
+  box-sizing: border-box;
+  padding: 0;
 }
 
 .sidebar-coupon {
@@ -159,11 +196,12 @@ body {
   font-size: 14px;
   margin-top: 24px;
   margin-bottom: 40px;
+  box-sizing: border-box;
+  padding: 0;
 }
 
-.sidebar-coupon textarea, input, input:focus {
+.sidebar-coupon-input:focus {
   outline: none;
-  border: 1px solid #81807a;
 }
 
 .sidebar-coupon-input {
@@ -174,6 +212,8 @@ body {
   padding-left: 16px;
   margin-top: 6px;
   margin-bottom: 31px;
+  box-sizing: border-box;
+  border: 1px solid #81807a;
 }
 
 .sidebar-coupon-submit-button {
@@ -185,6 +225,13 @@ body {
   background-color: #0f7c90;
   color: white;
   font-weight: 700;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.sidebar-coupon-submit-button:hover {
+  background-color: #0e5f6d;
 }
 
 .sidebar-cursor-pointer {
@@ -193,11 +240,16 @@ body {
 
 .sidebar-for-business {
   border-top: 1px solid #dcdacb;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .sidebar-for-business p {
   font-size: 14px;
   margin-top: 6px;
+  box-sizing: border-box;
+  padding: 0;
 }
 
 .sidebar-for-business button {
@@ -211,6 +263,8 @@ body {
   width: 100%;
   height: 42px;
   border-radius: 4px;
+  box-sizing: border-box;
+  padding: 0;
 }
 
 .sidebar-tight-letters {
@@ -221,6 +275,8 @@ body {
   width: 16px;
   height: 16px;
   margin-top: 2px;
+  box-sizing: border-box;
+  padding: 0;
 }
 
 .sidebar-small-icon svg {
